fix: 스키마 user부분 수정
